# databricks_app

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  databricks.yml  pyproject.toml  ~.,zshrc
.github/workflows/: databricks-bundle-deploy.yml
config/: expectations.yaml  ingest.yaml  pipeline.yaml
schemas/: bakehouse_recommendation-value.json
sql/: denormalized_sales_mart.ddl.sql  ingest_join.sql
src/: Untitled  __init__.py  expectations_runner.py  ingest_data.py  kafka_sender.py  main.py  mart_loader.py  paths.py
src/databricks_app/: ingest_data.py  main.py
